# Ising-Diffusion-Model-2D

./: .gitignore  Ising_Diffusion.ipynb  README.md  evaluate.py  pyproject.toml  requirements.txt  sample.py
checkpoints/: Ising_DDPM_1.yaml  Ising_DDPM_2.yaml
data/: ising_benchmark.npz
src/: __init__.py  dataset.py  diffusion.py  evaluate.py  model.py  sample.py  train.py
src/mc/: __init__.py  generate_data.py  ising_model.py
